Lab_3/person_detection/build/log/idf_py_stdout_output_3424
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/rodo1/esp/projects_tf/person_detection/build/bootloader/esp-idf/esptool_py && /home/rodo1/esp/idf-tools/python_env/idf5.5_py3.12_env/bin/python /home/rodo1/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/rodo1/esp/projects_tf/person_detection/build/bootloader/bootloader.bin
Bootloader binary size 0x6cd0 bytes. 0x330 bytes (3%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/main_functions.cc.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main_functions.cc.obj 
/home/rodo1/esp/idf-tools/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.5-dev-2488-gee77c489e7-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/rodo1/esp/projects_tf/person_detection/build/config -I/home/rodo1/esp/esp-idf/components/newlib/platform_include -I/home/rodo1/esp/esp-idf/components/freertos/config/include -I/home/rodo1/esp/esp-idf/components/freertos/config/include/freertos -I/home/rodo1/esp/esp-idf/components/freertos/config/xtensa/include -I/home/rodo1/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/rodo1/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/rodo1/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/rodo1/esp/esp-idf/components/freertos/esp_additions/include -I/home/rodo1/esp/esp-idf/components/esp_hw_support/include -I/home/rodo1/esp/esp-idf/components/esp_hw_support/include/soc -I/home/rodo1/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/rodo1/esp/esp-idf/components/esp_hw_support/dma/include -I/home/rodo1/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/rodo1/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/rodo1/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/rodo1/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/rodo1/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/rodo1/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/rodo1/esp/esp-idf/components/heap/include -I/home/rodo1/esp/esp-idf/components/heap/tlsf -I/home/rodo1/esp/esp-idf/components/log/include -I/home/rodo1/esp/esp-idf/components/soc/include -I/home/rodo1/esp/esp-idf/components/soc/esp32 -I/home/rodo1/esp/esp-idf/components/soc/esp32/include -I/home/rodo1/esp/esp-idf/components/soc/esp32/register -I/home/rodo1/esp/esp-idf/components/hal/platform_port/include -I/home/rodo1/esp/esp-idf/components/hal/esp32/include -I/home/rodo1/esp/esp-idf/components/hal/include -I/home/rodo1/esp/esp-idf/components/esp_rom/include -I/home/rodo1/esp/esp-idf/components/esp_rom/esp32/include -I/home/rodo1/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/rodo1/esp/esp-idf/components/esp_rom/esp32 -I/home/rodo1/esp/esp-idf/components/esp_common/include -I/home/rodo1/esp/esp-idf/components/esp_system/include -I/home/rodo1/esp/esp-idf/components/esp_system/port/soc -I/home/rodo1/esp/esp-idf/components/esp_system/port/include/private -I/home/rodo1/esp/esp-idf/components/xtensa/esp32/include -I/home/rodo1/esp/esp-idf/components/xtensa/include -I/home/rodo1/esp/esp-idf/components/xtensa/deprecated_include -I/home/rodo1/esp/esp-idf/components/esp_timer/include -I/home/rodo1/esp/esp-idf/components/lwip/include -I/home/rodo1/esp/esp-idf/components/lwip/include/apps -I/home/rodo1/esp/esp-idf/components/lwip/include/apps/sntp -I/home/rodo1/esp/esp-idf/components/lwip/lwip/src/include -I/home/rodo1/esp/esp-idf/components/lwip/port/include -I/home/rodo1/esp/esp-idf/components/lwip/port/freertos/include -I/home/rodo1/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/rodo1/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/rodo1/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/rodo1/esp/esp-idf/components/console -I/home/rodo1/esp/esp-idf/components/vfs/include -I/home/rodo1/esp/esp-idf/components/esp_vfs_console/include -I/home/rodo1/esp/esp-idf/components/spi_flash/include -I/home/rodo1/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro -I/home/rodo1/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/third_party/gemmlowp -I/home/rodo1/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/third_party/flatbuffers/include -I/home/rodo1/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/third_party/ruy -I/home/rodo1/esp/projects_tf/person_detection/managed_components/espressif__esp-tflite-micro/third_party/kissfft -I/home/rodo1/esp/projects_tf/person_detection/managed_components/espressif__esp32-camera/driver/include -I/home/rodo1/esp/projects_tf/person_detection/managed_components/espressif__esp32-camera/conversions/include -I/home/rodo1/esp/esp-idf/components/driver/deprecated -I/home/rodo1/esp/esp-idf/components/driver/i2c/include -I/home/rodo1/esp/esp-idf/components/driver/touch_sensor/include -I/home/rodo1/esp/esp-idf/components/driver/twai/include -I/home/rodo1/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/rodo1/esp/esp-idf/components/esp_pm/include -I/home/rodo1/esp/esp-idf/components/esp_ringbuf/include -I/home/rodo1/esp/esp-idf/components/esp_driver_gpio/include -I/home/rodo1/esp/esp-idf/components/esp_driver_pcnt/include -I/home/rodo1/esp/esp-idf/components/esp_driver_gptimer/include -I/home/rodo1/esp/esp-idf/components/esp_driver_spi/include -I/home/rodo1/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/rodo1/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/rodo1/esp/esp-idf/components/esp_driver_i2s/include -I/home/rodo1/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/rodo1/esp/esp-idf/components/sdmmc/include -I/home/rodo1/esp/esp-idf/components/esp_driver_sdspi/include -I/home/rodo1/esp/esp-idf/components/esp_driver_sdio/include -I/home/rodo1/esp/esp-idf/components/esp_driver_dac/include -I/home/rodo1/esp/esp-idf/components/esp_driver_rmt/include -I/home/rodo1/esp/esp-idf/components/esp_driver_tsens/include -I/home/rodo1/esp/esp-idf/components/esp_driver_sdm/include -I/home/rodo1/esp/esp-idf/components/esp_driver_i2c/include -I/home/rodo1/esp/esp-idf/components/esp_driver_uart/include -I/home/rodo1/esp/esp-idf/components/esp_driver_ledc/include -I/home/rodo1/esp/esp-idf/components/esp_driver_parlio/include -I/home/rodo1/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mdisable-hardware-atomics -mfix-esp32-psram-cache-issue -mfix-esp32-psram-cache-strategy=memw -O2 -fmacro-prefix-map=/home/rodo1/esp/projects_tf/person_detection=. -fmacro-prefix-map=/home/rodo1/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -fuse-cxa-atexit -DTF_LITE_STATIC_MEMORY -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main_functions.cc.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main_functions.cc.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main_functions.cc.obj -c /home/rodo1/esp/projects_tf/person_detection/main/main_functions.cc
/home/rodo1/esp/projects_tf/person_detection/main/main_functions.cc: In function 'void setup()':
/home/rodo1/esp/projects_tf/person_detection/main/main_functions.cc:69:28: error: 'g_mnist_digits_tiny_int8_tflite' was not declared in this scope; did you mean 'mnist_digits_tiny_int8_tflite'?
   69 |   model = tflite::GetModel(g_mnist_digits_tiny_int8_tflite);
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                            mnist_digits_tiny_int8_tflite
ninja: build stopped: subcommand failed.
